add RSS and change the title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: asanakoy
-name: Artsiom's Blog
+title: Gradient Dude
+name: Gradient Dude Blog
 author: Artsiom Sanakoyeu
 profile_url:  https://asanakoy.github.io
 twitter_username: artsiom_s
