--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Gradient Dude
 name: Gradient Dude Blog
 author: Artsiom Sanakoyeu
-profile_url:  https://asanakoy.github.io
+profile_url:  https://gdude.de
 twitter_username: artsiom_s
 baseurl: "/blog"
 description: >- # this means to ignore newlines until "baseurl:"
