add main page image for twitter

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Gradient Dude
+title_image: /assets/images/gradient_dude_logo_banks_sans2_square_larger_font_256.png
 name: Gradient Dude Blog
 author: Artsiom Sanakoyeu
 profile_url:  https://gdude.de
